--- a/自定义控件.md
+++ b/自定义控件.md
@@ -1,3 +1,67 @@
 # android.view继承关系图
 
 https://www.processon.com/view/link/56b5f1aee4b0df880d89eedf
+
+## 自定义titlebar
+``` xml
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="0dp"
+    android:background="@color/moeblack">
+
+    <Button
+        android:id="@+id/title_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5px"
+        android:text="@string/back"/>
+
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:text="标题"
+        android:textColor="@android:color/white" />
+    <Button
+        android:id="@+id/title_option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="5px"
+        android:text="@string/otpion"/>
+</LinearLayout>
+```
+```java
+public class Titlebar extends LinearLayout {
+
+    public TitleLayout(Context context, AttributeSet attrs) {
+        super(context, attrs);
+        LayoutInflater.from(context).inflate(R.layout.titlenav, this);
+
+        Button titleback=(Button)findViewById(R.id.title_back);
+        Button titleoption=(Button)findViewById(R.id.title_option);
+
+        titleback.setOnClickListener(new OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                ((Activity)getContext()).finish();
+            }
+        });
+
+        titleoption.setOnClickListener(new OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Toast.makeText(getContext(),"click",Toast.LENGTH_SHORT).show();
+
+            }
+        });
+    }
+}
+
+```
