--- a/自定义控件.md
+++ b/自定义控件.md
@@ -3,7 +3,7 @@
 https://www.processon.com/view/link/56b5f1aee4b0df880d89eedf
 
 ## 自定义titlebar
-[titlebar](https://github.com/timeloveboy/android-simple/blob/master/Image/titiebar.jpg)
+![titlebar](https://github.com/timeloveboy/android-simple/blob/master/Image/titiebar.jpg)
 ``` xml
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
