--- a/开辟子线程.md
+++ b/开辟子线程.md
@@ -1,39 +1,50 @@
 ##  线程方法
+``` java
 
+@Override
+public void onClick(View v) {
+    //模拟子线程耗时操作
+    new Thread(new Runnable(){
+        @Override
+        public void run()
+        {
+            text.setText("sdff");
+        }
+    )}.start();
+}
+```
 
 ## 匿名线程方法
 
 ``` java
-public class loginInteractorImpl implements loginInteractor{
-    @Override
-    public void Login(final String name,final String password,final  OnLoginFinishedListener listener) {
-        //模拟子线程耗时操作
-        new Thread()
-        {
-            @Override
-            public void run()
-            {
-                try
-                {
-                    Thread.sleep(2000);
-                } catch (InterruptedException e)
-                {
-                    e.printStackTrace();
-                }
-                //模拟登录成功
-                if ("zhy".equals(name) && (123+"").equals(password))
-                {
-                    userinfo user = new userinfo();
-                    user.setName(name);
-                    user.setPassword(Integer.parseInt(password));
-                    listener.Success(user);
-                } else if ( 123==Integer.parseInt(password))
-                {
-                    listener.PasswordError();
-                }
-            }
-        }.start();
-    }
 
+@Override
+public void onClick(View v) {
+    //模拟子线程耗时操作
+    new Thread()
+    {
+        @Override
+        public void run()
+        {
+            try
+            {
+                Thread.sleep(2000);
+            } catch (InterruptedException e)
+            {
+                e.printStackTrace();
+            }
+            //模拟登录成功
+            if ("zhy".equals(name) && (123+"").equals(password))
+            {
+                userinfo user = new userinfo();
+                user.setName(name);
+                user.setPassword(Integer.parseInt(password));
+                listener.Success(user);
+            } else if ( 123==Integer.parseInt(password))
+            {
+                listener.PasswordError();
+            }
+        }
+    }.start();
 }
 ```
