--- a/开辟子线程.md
+++ b/开辟子线程.md
@@ -1,4 +1,7 @@
 ##  线程方法
+
+android不允许 在 子线程中更新ui
+
 ``` java
 
 @Override
@@ -8,7 +11,10 @@ public void onClick(View v) {
         @Override
         public void run()
         {
-            text.setText("sdff");
+            //逻辑方法
+            
+            //如果在这里更新ui，会报错：android不允许 在 子线程中更新ui
+
         }
     )}.start();
 }
